--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -384,7 +384,7 @@ img {
 	font-size: 30px;
 	font-weight: bold;
 	margin-bottom: 25px;
-}
+}/**/
 .contact-me .button-two{
   text-align: center;
   background-color: red;
