--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -309,6 +309,21 @@ img {
   border-radius: .25rem;
 }
 
+.skills1__name {
+  display: inline-block;
+  font-size: var(--small-font-size);
+  margin-right: var(--mb-2);
+  margin-bottom: var(--mb-3);
+  padding: .25rem .5rem;
+  background-color: var(--white-color);
+  border-radius: .25rem;
+}
+
+.skills1__name:hover {
+  background-color: var(--first-color);
+  color: var(--white-color);
+}
+
 .skills__name:hover {
   background-color: var(--first-color);
   color: var(--white-color);
